<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cacerolos.joyngo.SignUp"
    android:background="@drawable/degradado">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText8"
        android:hint="@string/pass"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText9"
        android:hint="@string/pass2"
        android:layout_below="@+id/editText8"
        android:layout_alignStart="@+id/editText8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:id="@+id/button4"
        style="@style/botones"
        android:layout_marginBottom="52dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editText9"
        android:layout_alignEnd="@+id/editText9" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editText8"
        android:layout_alignEnd="@+id/editText8"
        android:hint="@string/nickName"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_below="@+id/editText3"
        android:layout_alignStart="@+id/editText3" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText4"
        android:layout_alignEnd="@+id/editText8"
        android:layout_below="@+id/editText4"
        android:id="@+id/radioGroup">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hombre"
            android:id="@+id/radioButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mujer"
            android:id="@+id/radioButton2" />
    </RadioGroup>


</RelativeLayout>
