<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cacerolos.joyngo.Intro"
    android:background="@drawable/degradado"
    style="@style/AppTheme">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduccion"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        style="@style/AppTheme" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crearCuenta"
        android:id="@+id/button"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        style="@style/botones"
        android:onClick="signUpClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciarSesion"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_marginTop="58dp"
        android:layout_alignEnd="@+id/button"
        android:layout_alignParentStart="true"
        style="@style/botones"
        android:onClick="loginClick" />

</RelativeLayout>
